Fix overflow

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -7,7 +7,6 @@
 */
 
 /* ----- Global Items ----- */
-
 html {
   font-size: 16px;
   height: 100%;
@@ -29,7 +28,6 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, 
     margin: 0;
     padding: 0;
 }
-
 
 .xoh {
     float: left;
@@ -77,15 +75,17 @@ div {
 .xr {
     margin: 0 auto;
     width: 960px;
+overflow:auto;
 }
 
 .xlr {
     float: left;
+
     width: 690px;
 }
 
 .xjr {
-    float: left;
+    float: right;
     margin: -70px 0 0 10px;
 }
 
@@ -94,7 +94,6 @@ div {
 }
 
 .xpt {
-    min-height: 340px;
     padding: 25px 0 50px;
 }
 
@@ -102,7 +101,9 @@ div {
 	width: 500px;
 }
 
-
+#xsqt{
+	color: #999999;
+}
 
 
 /*BODY*/
